<resources>
    <string name="app_name">Ft_hangouts</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="address">Address</string>
    <string name="save">SAVE</string>
    <string name="settings">Settings</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
</resources>
