<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_call"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/call"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sendsms"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/sms"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/update"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="never"/>
</menu>